<resources>
    <string name="app_name">PlayGames</string>
    <string name="title">Play Juegos</string>
    <string name="play">Play</string>
    <string name="new_player">New Player</string>
    <string name="preferencies">Preferencies</string>
    <string name="about">About</string>
    <string name="player_name">Player Name</string>
    <string name="phonetic_name">Phonetic Name</string>
    <string name="nickname">NickName</string>
    <string name="change">CHANGE</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="androidImage">Android Image</string>
    <string name="photo">photo</string>
    <string name="personimage">Person Icon</string>
    <string name="action_add">add</string>
    <string name="action_buscar">buscar</string>
    <string name="action_settings">settings</string>
    <string name="elige_opcion">Elige una opción</string>
    <string name="angry_birds">Angry Birds</string>
    <string name="dragon_fly">Dragon fly</string>
    <string name="hill_climbing_racing">Hill climbing racing</string>
    <string name="pocket_soccer">Pocket soccer</string>
    <string name="radiant_defense">Radiant defense</string>
    <string name="add">ADD</string>
    <string name="todo">TODO</string>
    <string name="ninja_jump">Ninja jump</string>
    <string name="wiiu">WIIU</string>
    <string name="ps4">PS4</string>
    <string name="pc">PC</string>
    <string name="xbox">XBOX</string>
    <string name="wii">WII</string>
    <string name="ds3">3DS</string>
    <string name="x360">X360</string>
    <string name="plataformas">Plataformas</string>
    <string name="generos">Géneros:</string>
    <string name="home">Home</string>
    <string name="textview">TextView</string>
</resources>