<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/titlePreference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/elige_opcion"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titlePreference"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/angryBirdsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/angry_birds"/>
        <RadioButton
            android:id="@+id/drogonFlyButtom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dragon_fly"/>
        <RadioButton
            android:id="@+id/hillClimbingRacingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hill_climbing_racing"/>
        <RadioButton
            android:id="@+id/pocketSoccerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pocket_soccer"/>
        <RadioButton
            android:id="@+id/radiantDefenseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/radiant_defense"/>

    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>