<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/nosifer"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/PlayButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:textStyle="bold"
            android:layout_margin="6dp"
            tools:layout_editor_absoluteX="233dp"
            tools:layout_editor_absoluteY="517dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newPlayerButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/new_player"
            android:layout_margin="6dp"
            android:textStyle="bold"
            android:clickable="true"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="455dp"
            android:focusable="true" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/PreferecesButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/preferencies"
            android:layout_margin="6dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="455dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/AboutButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_margin="6dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="455dp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>