<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPlayer">



    <ScrollView
        android:id="@+id/scrollablContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="1"
        >




        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2"
            android:layout_gravity="top"
            android:gravity="center">




            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">


                <ImageView
                    android:id="@+id/nameImage"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_column="0"
                    android:layout_weight="0.2"
                    android:src="@drawable/person_fill"
                    android:contentDescription="@string/personimage" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TiLayoutplayerName"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_column="1"
                    android:layout_weight="0.8"
                    android:layout_marginEnd="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/playerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/player_name"/>

                </com.google.android.material.textfield.TextInputLayout>



            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >
                <ImageView
                    android:visibility="invisible"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_column="0"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_launcher_background" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TiLayoutphoneticName"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_column="1"
                    android:layout_weight="0.8"
                    android:layout_marginEnd="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneticName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPhonetic"
                        android:hint="@string/phonetic_name"/>

                </com.google.android.material.textfield.TextInputLayout>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:visibility="invisible"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_column="0"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_launcher_background" />



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TiLayoutnickname"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_column="1"
                    android:layout_weight="0.8"
                    android:layout_marginEnd="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nickName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/nickname"/>
                </com.google.android.material.textfield.TextInputLayout>



            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/camImage"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_column="0"
                    android:layout_weight="0.2"
                    android:src="@drawable/photo_camera_fill"
                    android:contentDescription="@string/photo" />

                <ImageView
                    android:id="@+id/playerImage"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_column="1"
                    android:layout_weight="0.4"
                    android:src="@drawable/android_robot_icon_22"
                    android:contentDescription="@string/androidImage" />

                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_column="2"
                    android:layout_weight="0.4"
                    android:text="@string/change"
                android:backgroundTint="@color/md_theme_light_secondary"
                    android:layout_marginEnd="10dp"/>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                >

                <View
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_column="0"
                    android:layout_weight="0.7"
                    />

                <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.10"
                    tools:ignore="TouchTargetSizeCheck" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/phoneImage"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_column="0"
                    android:layout_weight="0.2"
                    android:src="@drawable/call_fill"
                    android:contentDescription="@string/phone" />

                <EditText
                    android:id="@+id/phoneInput"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_column="1"
                    android:layout_weight="0.8"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:layout_marginEnd="10dp"/>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/emailImage"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_column="0"
                    android:layout_weight="0.2"
                    android:src="@drawable/mail_fill"
                    android:contentDescription="@string/e_mail" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/TiLayoutEmail"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_column="1"
                    android:layout_weight="0.8"
                    android:layout_marginEnd="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/e_mail"/>

                </com.google.android.material.textfield.TextInputLayout>




            </TableRow>
        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>