<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Games">
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@android:drawable/ic_input_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintHorizontal_bias="0.9"
        android:contentDescription="@string/add" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ScrollViewCount">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/angryBirds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/dragonFly"
                android:gravity="start|center_vertical"
                android:padding="20dp"
                android:background="@color/md_theme_light_surfaceTint"
                android:layout_marginBottom="5dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:src="@mipmap/angry_birds_foreground"
                    android:contentDescription="@string/todo" />
                <CheckBox
                    android:id="@+id/angryBirdsCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:text="@string/angry_birds"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dragonFly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/angryBirds"
                app:layout_constraintBottom_toTopOf="@+id/hillClimbingRacing"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="start|center_vertical"
                android:padding="20dp"
                android:background="@color/md_theme_light_surfaceTint"
                android:layout_marginBottom="5dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:src="@mipmap/dragon_fly_foreground"
                    android:contentDescription="@string/todo" />
                <CheckBox
                    android:id="@+id/dragonFlyCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:text="@string/dragon_fly"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/hillClimbingRacing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dragonFly"
                app:layout_constraintBottom_toTopOf="@+id/radiantDefense"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="start|center_vertical"
                android:padding="20dp"
                android:background="@color/md_theme_light_surfaceTint"
                android:layout_marginBottom="5dp">


                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:src="@mipmap/hillclimbing_racing_foreground"
                    android:contentDescription="@string/todo" />
                <CheckBox
                    android:id="@+id/hillClimbingRacingCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:text="@string/hill_climbing_racing"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/radiantDefense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hillClimbingRacing"
                app:layout_constraintBottom_toTopOf="@+id/pocketSoccer"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="start|center_vertical"
                android:padding="20dp"
                android:background="@color/md_theme_light_surfaceTint"
                android:layout_marginBottom="5dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:src="@mipmap/radiant_defense_foreground"
                    android:contentDescription="@string/todo" />

                <CheckBox
                    android:id="@+id/radiantDefenseCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:text="@string/radiant_defense"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pocketSoccer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radiantDefense"
                app:layout_constraintBottom_toTopOf="@+id/ninJump"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="start|center_vertical"
                android:padding="20dp"
                android:background="@color/md_theme_light_surfaceTint"
                android:layout_marginBottom="5dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:src="@mipmap/pocket_soccer_foreground"
                    android:contentDescription="@string/todo"
                    />
                <CheckBox
                    android:id="@+id/pocketSoccerCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:text="@string/pocket_soccer"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ninJump"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pocketSoccer"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="start|center_vertical"
                android:padding="20dp"
                android:background="@color/md_theme_light_surfaceTint"
                >


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:src="@mipmap/nin_jump_foreground"
                    android:contentDescription="@string/todo"
                    />
                <CheckBox
                    android:id="@+id/ninJumpCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="20sp"
                    android:text="@string/ninja_jump"/>


            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>